# battleship-game

./: .gitignore  CMakeLists.txt  README.md
.cmake/api/v1/reply/: cache-v2-7d6bbebf75c7eb812993.json  cmakeFiles-v1-c6fbbd7b0a904776712c.json  codemodel-v2-dae445d5d43a37c6d9d7.json  index-2026-07-16T02-36-23-0347.json  target-SFML__Graphics-Debug-3b3588eeebb8b68ec6f9.json  target-SFML__System-Debug-518c8483c04fbf9e4322.json  target-SFML__Window-Debug-46a00470cee2baeb1c95.json  target-ToDoDaSemana-Debug-bfcedfa3d4c585990111.json  target-test_menu-Debug-2d513452822e55f79723.json  toolchains-v1-f6a68cda61cc4be0819d.json
include/controller/: AutoPlacer.h  GameController.h
include/model/: Board.h  GameState.h  MapLayout.h  ScoreCalculator.h  Ship.h
include/view/: BoardRenderer.h  MenuScreen.h  PlacementScreen.h
src/: main.cpp
src/controller/: AutoPlacer.cpp  GameController.cpp
src/model/: Board.cpp  GameState.cpp  MapLayout.cpp  ScoreCalculator.cpp  Ship.cpp
src/view/: BoardRenderer.cpp  MenuScreen.cpp  PlacementScreen.cpp
tests/: main_test_controller.cpp  main_test_renderer.cpp  manual_board_test.cpp  manual_menu_test.cpp  manual_ship_test.cpp  test_ship_manual.cpp
